recipe cards appear on home screen

--- a/client/recipedia/src/App.css
+++ b/client/recipedia/src/App.css
@@ -32,3 +32,13 @@ form {
   flex-direction: column;
   margin: 50px 100px;
 }
+
+.r-flex {
+  display: flex;
+  flex-direction: column;
+  max-width: 100px
+}
+
+.recipe-image {
+  
+}
