--- a/client/recipedia/src/App.css
+++ b/client/recipedia/src/App.css
@@ -1,8 +1,3 @@
-.App {
-  text-align: center;
-  background-color: grey
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -26,11 +21,20 @@
 header {
   background-color: rosybrown;
   color: solid white;
+ 
+
+}
+main {
+  background-color: #fff3f0;
+  text-align: center;
+  color: rgb(109, 62, 62)
+}
+
+nav {
   display: flex;
   flex-direction: row;
   text-align: center;
   justify-content: space-evenly;
-
 }
 
 form {
@@ -42,7 +46,8 @@ form {
 .r-flex {
   display: flex;
   flex-direction: column;
-  max-width: 100px
+  color: white;
+  
 }
 
 img {
@@ -55,5 +60,5 @@ img {
   width: 400px;
   margin: 30px;
   text-align: center;
-  background-color: rosybrown
+  background-color: rosybrown;
 }
